--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.0",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-safe-area-context": "^4.6.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
