--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
@@ -26,6 +25,7 @@ if linkage != nil
 end
 
 target 'SmartChat' do
+  use_modular_headers!
   config = use_native_modules!
 
   # Flags change depending on the env values.
