--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,9 @@ if linkage != nil
 end
 
 target 'SmartChat' do
-  use_modular_headers!
+  use_frameworks! :linkage => :static
+  # right after `use_frameworks! :linkage => :static`
+$RNFirebaseAsStaticFramework = true
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -34,13 +36,17 @@ target 'SmartChat' do
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
-    :hermes_enabled => flags[:hermes_enabled],
+
+    # :hermes_enabled => flags[:hermes_enabled],
+
     :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+
+    # :flipper_configuration => flipper_config,
+
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
