--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-native-firebase/app": "^18.1.0",
     "@react-native-firebase/auth": "^18.1.0",
+    "@react-native-firebase/database": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
     "@react-native-firebase/storage": "^18.1.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -24,7 +26,8 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^3.22.1"
+    "react-native-screens": "^3.22.1",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
