--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.22.1",
     "react-native-uuid": "^2.0.1",
+    "react-redux": "^8.1.1",
     "redux": "^4.2.1"
   },
   "devDependencies": {
